fixed eliipses icon overflowing

--- a/src/styles/pages/_dp-viola.scss
+++ b/src/styles/pages/_dp-viola.scss
@@ -182,19 +182,27 @@
       }
 
       .arrow,
-      .Ellipses,
+      .ellipses,
       .double-quotes,
       .forward-slash {
         position: absolute;
-        overflow: hidden;
+        overflow: hidden !important;
+
+        img {
+          object-fit: cover;
+        }
       }
 
       .arrow {
         left: 0;
         top: 0;
+        width: 100px;
+        height: 65px;
       }
 
-      .Ellipses {
+      .ellipses {
+        width: 110px !important;
+        height: 40px !important;
         right: 50px;
         top: 60px;
       }
@@ -202,11 +210,15 @@
       .double-quotes {
         left: 50px;
         bottom: 20px;
+        width: 90px;
+        height: 65px;
       }
 
       .forward-slash {
         right: 0;
         bottom: 0;
+        width: 100px;
+        height: 100px;
       }
     }
 
@@ -348,9 +360,9 @@
           height: 20px;
         }
 
-        .Ellipses {
-          width: 40px;
-          height: 15px;
+        .ellipses {
+          width: 40px !important;
+          height: 15px !important;
           right: 13px;
           top: 15px;
         }
